# wgpu_2d

./: Cargo.toml
src/: fragment.glsl  main.rs  tex_fragment.glsl  tex_vertex.glsl  vertex.glsl
